--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 h1 {
-  color: AliceBlue;
+  color: LightBlue;
   text-aling: center;
   background-color: AntiqueWhite;
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 100px;
   padding: 20px;
   margin: 20px;
 }
