--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@ h1 {
   padding: 20px;
   margin: 20px;
 }
+
+table {
+  border: 2px solid black;
+  border-collapse: collapse;
+}
+
+td {
+  border: 1px solid black;
+  padding 2px;
+}
