--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1 {
   color: LightBlue;
-  text-aling: center;
+  text-align: center;
   background-color: AntiqueWhite;
   width: 1200px;
   height: 100px;
