--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
 h1 {
-  color: LightBlue;
+  color: Black;
   text-align: center;
-  background-color: AntiqueWhite;
-  width: 1100px;
-  height: 50px;
-  padding: 20px;
-  margin: 20px;
 }
 
 table {
