--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 h1, h2 {
   color: Black;
   text-align: center;
+  font-family: Verdana, Arial, sans-serif;
+  font-weight: bold;
 }
 
 table {
   border: 2px solid black;
   border-collapse: collapse;
+  font-size: 12px;
 }
 
 td {
