--- a/style.scss
+++ b/style.scss
@@ -1,1 +1,19 @@
-$font-size: 20px;
+$color: red;
+
+a[href="wrong_answer1.html"] {
+  color: $color;
+}
+
+%lay-out {
+  padding: 20px;
+  margin: 20px;
+}
+
+div {
+    font-size: 18px;
+
+    ul {
+      @extend %lay-out;
+      color: blue;
+    }
+}
