--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h1, h2, h3 {
+h1, h2 {
   color: Black;
   font-family: Verdana, Arial, sans-serif;
   font-weight: bold;
@@ -18,6 +18,12 @@ td {
 
 #foo {
   background-color: Azure;
+}
+
+.bass {
+  color: Grey;
+  font-family: Verdana, Arial, sans-serif;
+  text-align: center;
 }
 
 ul li {
